unpackaged/main/default/objects/POS_Item__mdt/POS_Item__mdt.object-meta.xml
<CustomObject>
    <description>This setting applies to the Single Barrel Program and defines the name of the POS Item and any necessary help text</description>
    <label>POS Item</label>
    <pluralLabel>POS Items</pluralLabel>
</CustomObject>