unpackaged/main/default/objects/POS_Item__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Help_Text__c</columns>
    <columns>Options__c</columns>
    <columns>hasInsert__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>